<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="4"
    tools:targetApi="lollipop">

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/linear_layout_title"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn1"
        android:text="@string/button_1_linear_layout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:backgroundTint="@color/purple_200"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:targetApi="lollipop">

        <Button
            android:id="@+id/btn2"
            android:text="@string/button_2_linear_layout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/black"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn3"
            android:text="@string/button_3_linear_layout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/purple_200"
            android:layout_marginHorizontal="5dp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn4"
            android:text="@string/button_4_linear_layout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_200"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <Button
        android:id="@+id/backBtn"
        android:text="@string/back_to_home_Btn"
        android:layout_weight="1"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</LinearLayout>