<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".ConstraintLayoutActivity"
    tools:targetApi="lollipop" >

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/constraint_layout_title"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <Button
        android:id="@+id/btn1"
        android:text="@string/button_1_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="@id/textTitle"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        app:layout_constraintVertical_chainStyle="spread"
        />

    <Button
        android:id="@+id/btn2"
        android:text="@string/button_2_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@id/textTitle"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn3"
        android:text="@string/button_3_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintStart_toStartOf="@id/textTitle"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/description1"
        android:text="@string/description1"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        app:layout_constraintStart_toStartOf="@id/btn1"
        app:layout_constraintEnd_toEndOf="@id/btn3"/>

    <ImageView
        android:id="@+id/arrow_up_img"
        android:src="@drawable/feather_arrows_arrow_up_svg"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintBottom_toTopOf="@id/description1"
        app:layout_constraintStart_toStartOf="@id/btn1"
        app:layout_constraintEnd_toEndOf="@id/btn3"/>

    <ImageView
        android:id="@+id/arrow_down_img"
        android:src="@drawable/arrow_icon_down_4_512"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/description1"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        app:layout_constraintStart_toStartOf="@id/btn1"
        app:layout_constraintEnd_toEndOf="@id/btn3"/>

    <Button
        android:id="@+id/backBtn"
        android:text="@string/back_to_home_Btn"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.01"/>
</androidx.constraintlayout.widget.ConstraintLayout>