<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    tools:targetApi="lollipop" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/textTitle"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        />
    <Button
        android:id="@+id/LinearLayoutBtn"
        android:text="@string/linear_layout_btn"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="70dp" />
    <Button
        android:id="@+id/RelativeLayoutBtn"
        android:text="@string/relative_layout_btn"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/LinearLayoutBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ConstraintLayoutBtn"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_marginTop="20dp" />
    <Button
        android:id="@+id/ConstraintLayoutBtn"
        android:text="@string/constraint_layout_btn"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/LinearLayoutBtn"
        app:layout_constraintRight_toLeftOf="@id/RelativeLayoutBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>